--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,13 @@
-body{ background-color: #F60063;
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    
+    background-color: #F60063;
+    color:white
 
 }
+
+
