--- a/estilo.css
+++ b/estilo.css
@@ -14,7 +14,7 @@ body{
        background-color: #F60063;
        align-items: center;
        font-size: 20px;
-       justify-content: space-around;
+       justify-content: space-between;
        padding: 24px 0;
 
 }
