--- a/estilo.css
+++ b/estilo.css
@@ -34,6 +34,6 @@ body{
 }
 .secao1{
     display: flex;
-    background: #F60063;
+    background: #F60063(2,0,36);
     background-color: linear-gradient(#FFA9CD);
 }
