--- a/estilo.css
+++ b/estilo.css
@@ -36,4 +36,7 @@ body{
     display: flex;
     background: rgb(246,0,99);
     background: linear-gradient(0deg, rgba(246,0,99,1) 0%, rgba(255,169,205,1) 100%);
+    color: white;
+    align-items: center;
+    
 }
