--- a/estilo.css
+++ b/estilo.css
@@ -38,5 +38,6 @@ body{
     background: linear-gradient(0deg, rgba(246,0,99,1) 0%, rgba(255,169,205,1) 100%);
     color: white;
     align-items: center;
+    justify-content: center;
     
 }
