--- a/estilo.css
+++ b/estilo.css
@@ -42,5 +42,5 @@ body{
     font-size: 22px;
     
 }.secao2 { background: rgb(246,0,99);
-    background: linear-gradient(0deg, rgba(246,0,99,1) 0%, rgba(255,169,205,1) 100%);
+    background: (0deg, rgba(246,0,99,1) 0%, rgba(255,169,205,1) 100%);
 }
