--- a/estilo.css
+++ b/estilo.css
@@ -48,3 +48,12 @@ body{
     justify-content:center;
     font-size: 25x;
 }
+.secao2-titulo{
+    font-size: 30px;
+    padding: 25px 0;
+
+
+}
+     
+
+
