--- a/estilo.css
+++ b/estilo.css
@@ -62,5 +62,5 @@ grid-template-columns: 15% 15% 15% 15%;
 }
 .secao2-todos-personagens img {
     height: 200px;
-    width: 100;
+    width: 100px;
 }
