--- a/estilo.css
+++ b/estilo.css
@@ -57,7 +57,7 @@ body{
      
 .secao2-todos-personagens {
 display: grid;
-grid-template-columns: 15% 15% 15%;
+grid-template-columns: 15% 15% 15%15%
 
 }
 .secao2-todos-personagens img {
