--- a/estilo.css
+++ b/estilo.css
@@ -61,6 +61,7 @@ grid-template-columns: 15% 15% 15%15%
 
 }
 .secao2-todos-personagens img {
+    padding: 25px 0;
     margin: 50px;
     height: 270px;
     width: 159px;
