--- a/estilo.css
+++ b/estilo.css
@@ -42,7 +42,7 @@ body{
     font-size: 22px;
     
 }.secao2 { background: rgb(246,0,99);
-    background: (0deg, rgba(246,0,99,1) 0%, rgba(255,169,205,1) 100%);
+    background: linear-gradient(0deg, rgba(246,0,99,1) 0%, rgba(255,169,205,1) 100%);
     color: white;
     align-items: center;
     justify-content:center;
@@ -61,7 +61,6 @@ grid-template-columns: 15% 15% 15%15%
 
 }
 .secao2-todos-personagens img {
-    padding: 20px 20px;
     margin: 50px;
     height: 270px;
     width: 159px;
