--- a/estilo.css
+++ b/estilo.css
@@ -47,6 +47,7 @@ body{
     align-items: center;
     justify-content:center;
     font-size: 25x;
+    text-align: center;
 }
 .secao2-titulo{
     font-size: 30px;
