--- a/estilo.css
+++ b/estilo.css
@@ -41,8 +41,9 @@ body{
     justify-content:center;
     font-size: 22px;
     
-}.secao2 { background: rgb(246,0,99);
-    background: (0deg, rgba(246,0,99,1) 0%, rgba(255,169,205,1) 100%);
+}.secao2 { 
+    background: rgb(246,0,99);
+    background: linear-gradient(0deg, rgba(246,0,99,1) 0%, rgba(255,169,205,1) 100%);
     color: white;
     align-items: center;
     justify-content:center;
